--- a/smurfs/src/index.css
+++ b/smurfs/src/index.css
@@ -3,3 +3,52 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+button {
+  border: 1px dotted rgb(97, 93, 93);
+    border-radius: 10px;
+    font-family : sans-serif;
+    font-size   : 100%;
+    padding      : 15px 10px 5px 5px;
+    font         : bold .6em sans-serif;
+    border       : 2px solid #333;
+    border-radius: 5px;
+    background   : none;
+    cursor       : pointer;
+    -webkit-appearance: none;
+   -webkit-transform: rotate(-1.5deg);
+    -moz-transform: rotate(-1.5deg);
+    -ms-transform: rotate(-1.5deg);
+    -o-transform: rotate(-1.5deg);
+    transform: rotate(-1.5deg);
+    box-shadow: 10px 10px 5px grey;
+  }
+
+  button:after {
+    content: " >>>";
+  }
+  
+  button:hover,
+  button:focus {
+    outline   : none;
+    background: #000;
+    color   : #FFF;
+  }
+  
+  input {
+    /* display: flex;
+    flex-direction: row; */
+    /* justify-content: space-around; */
+    border: 5px solid rgb(100, 88, 88); 
+    padding: 10px 15px;
+    background: rgba(246, 235, 235, 0.5);
+    margin: 10px 30px 30px 0; 
+    box-shadow: 10px 10px 5px grey;
+    transition:all 0.5s;
+    position: relative;
+    z-index: 1;
+}
+
+input:hover {
+  transform: translateY(-4px) scale(1.03);
+}
